Transition to have nothing if background rendering evicts all frames.

If we're background rendering it's possible for us to expire all
frames if the audio renderer advances too far ahead. In this case
we need to transition into the HAVE_NOTHING state so the Renderer
is aware we don't have frames.

It seems possible for this bug to permanently hang video playback
in release builds since the renderer has no idea what state we're
in and the video renderer will never transition to have enough.

BUG=630860
TEST=new unittest.

Review-Url: https://codereview.chromium.org/2363983003
Cr-Commit-Position: refs/heads/master@{#420808}

Former-commit-id: fdde31284d8d1fb76451c55e6a579b34f5aa35f1